--- a/mvc/src/main/res/layout/activity_main.xml
+++ b/mvc/src/main/res/layout/activity_main.xml
@@ -17,10 +17,11 @@
             android:layout_height="wrap_content"
             android:text="用户名"
             />
+
         <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:id="@+id/username"
+            android:layout_width="347dp"
+            android:layout_height="wrap_content"
             android:layout_weight="0.80" />
 
     </LinearLayout>
@@ -29,26 +30,27 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="密码"
-            />
+            android:text="密码" />
+
         <EditText
+            android:id="@+id/password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/password"
             android:layout_weight="0.8" />
 
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/bt_login"
-        android:text="登录"
-
+        android:layout_width="403dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+
         android:nestedScrollingEnabled="true"
-        android:onClick="login" />
+        android:onClick="login"
+        android:text="登录" />
 </LinearLayout>
